active_DATA =  \
	   spotlight1.png     	\
	   spotlight2.png     	\
	   glow.png     	\
	   glow2.png      	\
	   glow3.png    	\
	   glow4.png       	\
	   glow5.png       	\
	   glow6.png            \
	   glow7.png		\
	   glow8.png		\
	   glow9.png

activedir = $(pkgdatadir)/active

EXTRA_DIST = 			\
	$(active_DATA)		\
	spotlight_png_inline.c

